I made the settings in the environment variables

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,12 @@ __pycache__/
 # === Virtual environment ===
 myvenv/
 venv/
-.env/
 
 # === Django ===
+.env
 db.sqlite3
 static/
+media/
 
 # === IDE / OS ===
 .vscode/
